# MarsRover2019

./: .gitignore  .travis.yml  README.md  dependencies.rosinstall  install_dependencies.sh  uwrt_rover.rosinstall
BaseStation/Workspace/src/antenna/: CMakeLists.txt
BaseStation/udev/: 99-basestation-arduino.rules  99-basestation-gps.rules
Workspace/: joy_launch.launch  zed.launch
Workspace/src/antenna/: CMakeLists.txt  package.xml
Workspace/src/antenna/launch/: antenna_sim_launch.launch  spawn_multiple_robots.launch
Workspace/src/antenna/src/: arduino_code.c  calc_angle.cpp  rpi_control.py  sim_control.cpp
Workspace/src/antenna_sim_description/: CMakeLists.txt  package.xml
Workspace/src/antenna_sim_description/com_base_station/: model.config  model.urdf
Workspace/src/antenna_sim_gazebo/: CMakeLists.txt  package.xml
Workspace/src/antenna_sim_gazebo/launch/: antenna_sim.launch  display.launch  joint_control.launch
Workspace/src/antenna_sim_gazebo/worlds/: antenna_sim.world
Workspace/src/arm_interface/: CMakeLists.txt  package.xml
Workspace/src/arm_interface/msg/: ArmCmd.msg
Workspace/src/arm_interface/src/: .arm_motor_commands_node.cpp.swp  .~lock.arm_motor_commands_node.cpp#  arm_interface.h  arm_motor_commands_node.cpp  arm_motor_commands_node.cpp.old  arm_motor_commands_node_2.cpp  arm_sim_node.cpp  helloWorld.cpp  publisher_arm_motor_commands_node  subscribe_arm_motor_commands_node.cpp
Workspace/src/arm_interface/srv/: arm_mode.srv
Workspace/src/autonomy/: CMakeLists.txt  package.xml
Workspace/src/autonomy/launch/: autonomy.launch
Workspace/src/autonomy/src/: autonomy_goal_input.cpp  autonomy_goal_pub_node.cpp  autonomy_master_logic.cpp  autonomy_master_node.cpp  autonomy_twist_mux.cpp
Workspace/src/console_message/: CMakeLists.txt  package.xml
Workspace/src/console_message/include/: console_message.h
Workspace/src/console_message/include/console_message/: console_message.h
Workspace/src/console_message/msg/: console_msg.msg
Workspace/src/console_message/src/: console_message.cpp  console_message.h
Workspace/src/console_message/test/: test_console_message.cpp
Workspace/src/cost_map/: CMakeLists.txt  CostMap.cpp  cost_map_localization.h  cost_map_locatlization.cpp  cost_map_node.cpp  cost_map_node_oo.cpp  package.xml
Workspace/src/cost_map/cmake/: FindOpenCV.cmake
Workspace/src/cost_map/include/cost_map/: CostMap.h  cost_map_localization.h  localization.h
Workspace/src/cost_map/msg/: Costmap.msg
Workspace/src/direction_overlay/: CMakeLists.txt  direction_node.cpp  package.xml
Workspace/src/direction_overlay/src/: direction_overlay.cpp
Workspace/src/gimbal_interface/: CMakeLists.txt  package.xml
Workspace/src/gimbal_interface/src/: gimbal_interface_node.cpp
Workspace/src/ik/: CMakeLists.txt  package.xml
Workspace/src/ik/include/ik/: Roboarm.h
Workspace/src/ik/src/: .~lock.ee_crds.csv#  Roboarm.cpp  ee_crds.csv  ik  ik_test.cpp  main.cpp
Workspace/src/ik/src/visualization/: index.html  setup.js  style.css  vis.js
Workspace/src/local_planner/: CMakeLists.txt  package.xml
Workspace/src/local_planner/cfg/: local_planner_rover_cfg.yaml
Workspace/src/local_planner/launch/: local_plan_real.launch  local_plan_sim.launch  local_planner_stand_alone.launch  sim_setup.launch
Workspace/src/local_planner/msg/: LocalPlannerStatus.msg
Workspace/src/local_planner/src/: CostMap.cpp  CostMap.h  CostMapBase.cpp  CostMapBase.h  DWAPlanner.cpp  DWAPlanner.h  LocalPlanner.cpp  LocalPlanner.h  LocalPlannerMain.cpp  PlanningAlgoBase.cpp  PlanningAlgoBase.h  RoverParams.h
Workspace/src/local_planner/srv/: SetGoal.srv  StatusRequest.srv
Workspace/src/localization/: CMakeLists.txt  gps_converter_node.cpp  package.xml
Workspace/src/localization_converter/: CMakeLists.txt  package.xml
Workspace/src/obstacle_detection/: CMakeLists.txt  package.xml
Workspace/src/ros_canopen/: README.md  canableup.sh
Workspace/src/roverGUI/: CMakeLists.txt  package.xml
Workspace/src/rover_gui/: CMakeLists.txt  package.xml
Workspace/src/rover_gui/cfg/: rover_gui_cfg.yaml
Workspace/src/rover_gui/include/rover_gui/: armcontrolswidget.hpp  armvizwidget.hpp  autonomycontrolswidget.hpp  cameraviewwidget.hpp  consolewidget.hpp  gimbalwidget.hpp  gui.h  main_window.hpp  maincontrolswidget.hpp  mapwidget.hpp  sciencecontrolswidget.hpp  xboxvizwidget.hpp
Workspace/src/rover_gui/launch/: rover_gui.launch
Workspace/src/rover_gui/src/: armcontrolswidget.cpp  armvizwidget.cpp  autonomycontrolswidget.cpp  cameraviewwidget.cpp  consolewidget.cpp  gimbalwidget.cpp  main.cpp  main_window.cpp  maincontrolswidget.cpp  mapwidget.cpp  sciencecontrolswidget.cpp  xbox.cpp  xboxvizwidget.cpp
Workspace/src/rover_gui/ui/: armcontrolswidget.ui  armvizwidget.ui  autonomycontrolswidget.ui  cameraviewwidget.ui  gimbalwidget.ui  main_window.ui  main_window.ui.autosave  maincontrolswidget.ui  mapwidget.ui  sciencecontrolswidget.ui  xboxvizwidget.ui
Workspace/src/rover_msgs/: CMakeLists.txt  package.xml
Workspace/src/safety/: CMakeLists.txt  package.xml
Workspace/src/science_interface/: CMakeLists.txt  package.xml
Workspace/src/simulation/: CMakeLists.txt  package.xml
Workspace/src/spiral/: CMakeLists.txt  package.xml
Workspace/src/stitcher/: CMakeLists.txt  package.xml
Workspace/src/stitching_tester/: CMakeLists.txt  package.xml
Workspace/src/talker_node/: CMakeLists.txt  package.xml
Workspace/src/tennis_ball_follower/: CMakeLists.txt  package.xml
Workspace/src/tennis_ball_tracker/: CMakeLists.txt  package.xml
Workspace/src/twist2roboteq/: CMakeLists.txt  package.xml
Workspace/src/uwrt_bringup/: CMakeLists.txt  package.xml
Workspace/src/xbox_controller/: CMakeLists.txt  package.xml
ci/: check_formatting.bash
hosts/: hosts
imu_arduino/Razor_AHRS/: Razor_AHRS.ino
imu_mag_calibration/Processing/Magnetometer_calibration/: magnetom.float
udev/: 99-gps.rules  99-imu.rules  99-roboteq.rules  99-uwrt-cameras.rules  99-uwrt-gps.rules  99-uwrt-imu.rules  99-uwrt-roboteq.rules  99-uwrt-xbox.rules  99-xbox.rules
(+123 files in other folders)
