<?xml version="1.0"?>
<package format="2">
  <name>console_message</name>
  <version>0.0.0</version>
  <description>The console_message package</description>

  <maintainer email="uwrt@todo.todo">roberttoyonaga</maintainer>

  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
