<?xml version="1.0"?>
<package format="2">
  <name>ik</name>
  <version>0.0.0</version>
  <license>TODO</license>
  <maintainer email="x@todo.com">Robert Toyonaga</maintainer>
  <maintainer email="x@todo.com">Omar Alashqar</maintainer>
  <description>The ik package</description>

  <author>Robert Toyonaga</author>
  <author>Omar Alashqar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
