<?xml version="1.0"?>
<package>
  <name>rover_gui</name>
  <version>0.1.0</version>
  <description>

     roverGUI

  </description>
  <maintainer email="roberttoyonaga@gmail.com">roberttoyonaga</maintainer>
  <author>roberttoyonaga</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>console_message</build_depend>
  <build_depend>science_interface</build_depend>
  <build_depend>rover_msgs</build_depend>
  <build_depend>cost_map</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>console_message</run_depend>
  <run_depend>science_interface</run_depend>
  <run_depend>rover_msgs</run_depend>
  <run_depend>cost_map</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <!--exec_depend>console_message</exec_depend-->

 
</package>
