<?xml version="1.0"?>
<package format = "2">
  <name>rover_gui</name>
  <version>0.1.0</version>
  <description>

     roverGUI

  </description>
  <maintainer email="roberttoyonaga@gmail.com">roberttoyonaga</maintainer>
  <author>roberttoyonaga</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <depend>image_transport</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>console_message</build_depend>
  <build_depend>science_interface</build_depend>
  <build_depend>rover_msgs</build_depend>
  <build_depend>arm_interface</build_depend>
  <build_depend>cost_map</build_depend>
  <exec_depend>qt_build</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>libqt4-dev</exec_depend>
  <exec_depend>console_message</exec_depend>
  <exec_depend>science_interface</exec_depend>
  <exec_depend>rover_msgs</exec_depend>
  <exec_depend>cost_map</exec_depend>
  <exec_depend>arm_interface</exec_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <!--exec_depend>console_message</exec_depend-->

 
</package>
